--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de assinatura</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
-
-        <section class="container principal">
-            <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
-            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a> 
-            <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
-            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>        
-        </section>
-
-    </div>
-
-</body>  
+<section class="conteiner principal">
+    <h1>Com o combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único</h1>
+    <img src="img/Combo.png" alt="o combo+ é a junção do alura+ e o alura língua">
+</section>
+</body>
 </html>
